[package]
name = "lockedfile-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.8.1", features = ["full"] }

[dependencies.lockedfile]
path = "../lockedfile"

[dev-dependencies]
tempfile = "3.2.0"
