[package]
name = "lockedfile-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stdproc"
path = "src/stdproc.rs"
test = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.8.1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-core = "0.1.18"
tracing-subscriber = "0.2"

[dependencies.lockedfile]
path = "../lockedfile"

[dev-dependencies]
tempfile = "3.2.0"
