[package]
name = "lockedfile"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.97"
tokio = { version = "1.8.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3.2.0"
